<resources>
    <string name="nc_conversation_list_title">聊天列表</string>
    <string name="nc_conversation_list_notice_network_unavailable">网络不可用，检查您的连接。</string>
    <string name="nc_conversation_list_notice_proxy_unavailable">代理不可用</string>
    <string name="nc_conversation_list_notice_disconnect">无法连接到服务器</string>
    <string name="nc_conversation_list_notice_kicked">此帐户已在其他设备上登录</string>
    <string name="nc_conversation_list_notice_connecting">连接中...</string>
    <string name="nc_conversation_list_dialog_cancel_top">取消置顶</string>
    <string name="nc_conversation_unread_dot">99+</string>
    <string name="nc_conversation_summary_content_image">[图片]</string>
    <string name="nc_conversation_summary_content_voice">[语音]</string>
    <string name="nc_conversation_summary_content_file">[文件]</string>
    <string name="nc_conversation_summary_content_sight">[小视频]</string>
    <string name="nc_conversation_summary_content_combine">[合并转发]</string>
    <string name="nc_conversation_summary_content_draft">[草稿]</string>
    <string name="nc_conversation_summary_content_mentioned">[有人@我]</string>
    <string name="nc_date_yesterday">昨天</string>
    <string name="nc_date_sunday">星期日</string>
    <string name="nc_date_monday">星期一</string>
    <string name="nc_date_tuesday">星期二</string>
    <string name="nc_date_wednesday">星期三</string>
    <string name="nc_date_thursday">星期四</string>
    <string name="nc_date_friday">星期五</string>
    <string name="nc_date_saturday">星期六</string>
    <string name="nc_date_morning">凌晨</string>
    <string name="nc_date_am">上午</string>
    <string name="nc_date_noon">中午</string>
    <string name="nc_date_pm">下午</string>
    <string name="nc_date_night">晚上</string>
    <string name="nc_default_message">暂不支持此消息类型</string>
    <string name="nc_recalled_message">删除消息</string>
    <string name="nc_voip_occupying">音频正在使用中，请稍后重试。</string>
    <string name="nc_unread_message">{0} 条新消息</string>
    <string name="nc_new_message_divider_content">之前的消息</string>
    <string name="nc_recall_failed_for_network_unavailable">无法删除，检查您的连接。</string>
    <string name="nc_recall_overtime">删除过期</string>
    <string name="nc_load_image_failed">无法加载图像</string>
    <string name="nc_send_large_gif_failed">GIF太大，无法发送</string>
    <string name="nc_edit_status_progress">更新中</string>
    <string name="nc_edit_status_success">已编辑</string>
    <string name="nc_edit_status_failed">更新失败，点击重试。</string>
    <string name="nc_edit_status_retry_failed">重试失败，请稍后再试。</string>
    <string name="nc_reference_status_delete">此消息已删除</string>
    <string name="nc_reference_status_recall">此消息已为所有人删除</string>
    <string name="nc_edit_failed_by_remote_msg_not_exist">无法编辑，因为云消息不再存在</string>
    <string name="nc_edit_failed_by_sensitive">更新失败，内容包含敏感信息</string>
    <string name="nc_edit_failed_by_expire">编辑已过期</string>
    <string name="nc_voice_rec">手指上滑，取消发送</string>
    <string name="nc_voice_cancel">手指上滑，取消发送</string>
    <string name="nc_voice_short">录制太短</string>
    <string name="nc_voice_too_long">录制太长</string>
    <string name="nc_voice_press_to_input">按住 说话</string>
    <string name="nc_voice_release_to_send">松开 结束</string>
    <string name="nc_permission_grant_needed">在“设置”中打开此权限</string>
    <string name="nc_permission_microphone">（麦克风）</string>
    <string name="nc_permission_name_camera">相机</string>
    <string name="nc_permission_name_microphone">麦克风</string>
    <string name="nc_permission_name_storage">存储空间</string>
    <string name="nc_permission_name_photos">照片</string>
    <string name="nc_permission_name_videos">视频</string>
    <string name="nc_permission_name_partial_photos">部分照片</string>
    <string name="nc_permission_name_location">位置信息</string>
    <string name="nc_permission_name_bluetooth">蓝牙</string>
    <string name="nc_permission_name_phone">电话</string>
    <string name="nc_permission_name_overlay">悬浮窗</string>
    <string name="nc_permission_request_failed">无法获得权限</string>
    <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
    <string name="nc_notification_error_ssl_cert_invalid">网站证书无效</string>
    <string name="nc_dialog_ok">确定</string>
    <string name="nc_confirm">确认</string>
    <string name="nc_cancel">取消</string>
    <string name="nc_back">返回</string>
    <string name="nc_prompt">通知</string>
    <string name="nc_not_prompt">不再显示</string>
    <string name="nc_dialog_item_message_copy">复制消息</string>
    <string name="nc_dialog_item_message_delete_failed_msg">已断开连接，稍后重试。</string>
    <string name="nc_dialog_edit_message_content">您正在编辑另一条消息。如果继续，之前的编辑将会丢失。</string>
    <string name="nc_dialog_edit_message_is_delete">消息已删除，无法保存</string>
    <string name="nc_ext_plugin_image">照片</string>
    <string name="nc_ext_plugin_file">文件</string>
    <string name="nc_notification_channel_name">新消息</string>
    <string name="nc_notification_ticker_text">您有了一条新消息</string>
    <string name="nc_emoji_smiley_face">笑脸</string>
    <string name="nc_emoji_grinning_face">笑嘻嘻</string>
    <string name="nc_emoji_smiley">微笑</string>
    <string name="nc_emoji_cute">萌萌哒</string>
    <string name="nc_emoji_winking_face">眨眼</string>
    <string name="nc_emoji_heart_eyes">色眯眯</string>
    <string name="nc_emoji_blowing_kiss">飞吻</string>
    <string name="nc_emoji_kiss_face">么么哒</string>
    <string name="nc_emoji_crazy_face">调皮</string>
    <string name="nc_emoji_tongue_out">吐舌头</string>
    <string name="nc_emoji_flushed_face">脸红</string>
    <string name="nc_emoji_grinning_with_smiling">露齿而笑</string>
    <string name="nc_emoji_pensive">沉思</string>
    <string name="nc_emoji_pleased">满意</string>
    <string name="nc_emoji_dissatisfied">不满</string>
    <string name="nc_emoji_worried_face">苦瓜脸</string>
    <string name="nc_emoji_disappointed_face">失望</string>
    <string name="nc_emoji_helpless_face">无助</string>
    <string name="nc_emoji_crying">伤心</string>
    <string name="nc_emoji_laughing_tears">喜极而泣</string>
    <string name="nc_emoji_sobbing">哭泣</string>
    <string name="nc_emoji_sleepy_face">困</string>
    <string name="nc_emoji_cold_sweat">冷汗</string>
    <string name="nc_emoji_happy_sweat">尴尬</string>
    <string name="nc_emoji_sweat">汗</string>
    <string name="nc_emoji_tired_face">抓狂</string>
    <string name="nc_emoji_weary_face">疲惫</string>
    <string name="nc_emoji_fearful_face">可怕</string>
    <string name="nc_emoji_scream">尖叫</string>
    <string name="nc_emoji_angry_face">生气</string>
    <string name="nc_emoji_mad_face">怒气冲冲</string>
    <string name="nc_emoji_confounded_face">蒙羞</string>
    <string name="nc_emoji_big_grin">大笑</string>
    <string name="nc_emoji_hungry">馋</string>
    <string name="nc_emoji_mask_face">口罩</string>
    <string name="nc_emoji_sunglasses">墨镜</string>
    <string name="nc_emoji_sleeping">睡眠</string>
    <string name="nc_emoji_shocked_face">震惊</string>
    <string name="nc_emoji_dizzy_face">头晕眼花</string>
    <string name="nc_emoji_purple_devil">小恶魔</string>
    <string name="nc_emoji_devil">恶魔</string>
    <string name="nc_emoji_surprised_face">惊呆</string>
    <string name="nc_emoji_grimacing_face">扮鬼脸</string>
    <string name="nc_emoji_confused">困惑</string>
    <string name="nc_emoji_mouthless">无口</string>
    <string name="nc_emoji_halo">天使光环</string>
    <string name="nc_emoji_smirking_face">傻笑</string>
    <string name="nc_emoji_expressionless_face">面无表情</string>
    <string name="nc_emoji_see_no_monkey">不看</string>
    <string name="nc_emoji_hear_no_monkey">不听</string>
    <string name="nc_emoji_no_speaking">闭嘴</string>
    <string name="nc_emoji_alien">外星人</string>
    <string name="nc_emoji_pile_of_poo">便便</string>
    <string name="nc_emoji_broken_heart">心碎</string>
    <string name="nc_emoji_fire">火</string>
    <string name="nc_emoji_anger">愤怒</string>
    <string name="nc_emoji_zzz">ZZZ</string>
    <string name="nc_emoji_prohibited">禁止</string>
    <string name="nc_emoji_star">星星</string>
    <string name="nc_emoji_lightning_bolt">闪电</string>
    <string name="nc_emoji_crescent_moon">弯月</string>
    <string name="nc_emoji_sunny">晴朗</string>
    <string name="nc_emoji_cloudy">多云</string>
    <string name="nc_emoji_cloud">云彩</string>
    <string name="nc_emoji_snowflake">雪花</string>
    <string name="nc_emoji_umbrella">雨伞</string>
    <string name="nc_emoji_snowman">雪人</string>
    <string name="nc_emoji_thumbs_up">赞</string>
    <string name="nc_emoji_thumbs_down">喝倒彩</string>
    <string name="nc_emoji_shake_hand">握手</string>
    <string name="nc_emoji_ok_hand">没问题</string>
    <string name="nc_emoji_oncoming_fist">击拳</string>
    <string name="nc_emoji_raised_fist">举起拳头</string>
    <string name="nc_emoji_victory_hand">耶</string>
    <string name="nc_emoji_raised_hand">举手</string>
    <string name="nc_emoji_folded_hands">祈祷</string>
    <string name="nc_emoji_pointing_up">第一</string>
    <string name="nc_emoji_clapping_hands">鼓掌</string>
    <string name="nc_emoji_flexed_biceps">肌肉</string>
    <string name="nc_emoji_family">家庭</string>
    <string name="nc_emoji_couple">情侣</string>
    <string name="nc_emoji_baby_angel">宝贝天使</string>
    <string name="nc_emoji_horse">马</string>
    <string name="nc_emoji_dog">狗</string>
    <string name="nc_emoji_pig">猪</string>
    <string name="nc_emoji_ghost">鬼</string>
    <string name="nc_emoji_rose">玫瑰</string>
    <string name="nc_emoji_sunflower">向日葵</string>
    <string name="nc_emoji_pine_tree">松树</string>
    <string name="nc_emoji_christmas_tree">圣诞树</string>
    <string name="nc_emoji_wrapped_gift">礼物</string>
    <string name="nc_emoji_party_popper">聚会礼花</string>
    <string name="nc_emoji_money_bag">钱袋</string>
    <string name="nc_emoji_birthday_cake">生日蛋糕</string>
    <string name="nc_emoji_barbecue">BBQ</string>
    <string name="nc_emoji_cooked_rice">米饭</string>
    <string name="nc_emoji_ice_cream">冰淇淋</string>
    <string name="nc_emoji_chocolate_bar">巧克力</string>
    <string name="nc_emoji_watermelon">西瓜</string>
    <string name="nc_emoji_wine_glass">红酒</string>
    <string name="nc_emoji_cheers">干杯</string>
    <string name="nc_emoji_coffee">咖啡</string>
    <string name="nc_gender_man">男</string>
    <string name="nc_gender_female">女</string>
    <string name="nc_nickname_label">昵称</string>
    <string name="nc_nickname_hint">请输入昵称</string>
    <string name="nc_edit_permission">只有群主及管理员可以编辑</string>
    <string name="nc_expired">已过期</string>
    <string name="nc_group_nickname">群组中的昵称</string>
    <string name="nc_all_requests">全部请求</string>
    <string name="nc_pending_confirmation">待处理</string>
    <string name="nc_completed">已完成</string>
    <string name="nc_group_name_hint">请输入群名称</string>
    <string name="nc_group_name">群名称</string>
    <string name="nc_group_management">管理群组</string>
    <string name="nc_group_managers">管理员</string>
    <string name="nc_user_not_found">未找到用户</string>
    <string name="nc_group_announcement">群公告</string>
    <string name="nc_nickname_description">群组中的每个人都可以看到此昵称</string>
    <string name="nc_group_notice_hint">输入公告</string>
    <string name="nc_empty_notice">尚未公告</string>
    <string name="nc_group_remark">群组别名</string>
    <string name="nc_group_name_edit">修改群名称</string>
    <string name="nc_group_select_member">选择群成员</string>
    <string name="nc_group_edit_info_permission">谁可以编辑群信息</string>
    <string name="nc_group_add_member_permission">谁可以添加群成员</string>
    <string name="nc_group_remove_member_permission">谁可以移除群成员</string>
    <string name="nc_group_edit_member_info_permission">谁可以编辑会员信息</string>
    <string name="nc_group_invitation_confirmation">管理员批准</string>
    <string name="nc_group_transfer">转让群</string>
    <string name="nc_gender_edit">编辑性别</string>
    <string name="nc_all_friend_request">全部好友请求</string>
    <string name="nc_my_received_request">收到请求</string>
    <string name="nc_my_sent_request">发送请求</string>
    <string name="nc_group_member_remark">会员昵称</string>
    <string name="nc_group_note_hint">进入群组别名</string>
</resources>