<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/nc_auxiliary_background_1_color"
    android:orientation="vertical">

    <ai.nexconn.chatui.widget.component.HeadComponent
        android:id="@+id/nc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nc_title_bar_height"
        app:head_right_text="@string/nc_confirm"
        app:head_title_text="@string/nc_gender_edit" />

    <ai.nexconn.chatui.widget.SettingItemView
        android:id="@+id/siv_gender_man"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/nc_margin_size_16"
        android:layout_marginEnd="@dimen/nc_margin_size_16"
        app:item_content="@string/nc_gender_man"
        app:item_divider="true"
        app:item_right_image="?attr/nc_group_manage_gender_cell_check_img" />

    <ai.nexconn.chatui.widget.SettingItemView
        android:id="@+id/siv_gender_female"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/nc_margin_size_16"
        android:layout_marginEnd="@dimen/nc_margin_size_16"
        app:item_content="@string/nc_gender_female"
        app:item_right_image="?attr/nc_group_manage_gender_cell_check_img" />

</LinearLayout>