<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/nc_auxiliary_background_1_color"
    android:orientation="vertical">

    <ai.nexconn.chatui.widget.component.HeadComponent
        android:id="@+id/nc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nc_title_bar_height"
        app:head_title_text="@string/nc_group_management" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/nc_margin_size_16"
            android:paddingEnd="@dimen/nc_margin_size_16"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_margin_size_12" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_admin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_managers"
                app:item_divider="false"
                app:item_right_image="?attr/nc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_margin_size_12" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_edit_info_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_edit_info_permission"
                app:item_divider="true"
                app:item_right_image="?attr/nc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_add_member_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_add_member_permission"
                app:item_divider="true"
                app:item_right_image="?attr/nc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_remove_member_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_remove_member_permission"
                app:item_divider="true"
                app:item_right_image="?attr/nc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_edit_member_info_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_edit_member_info_permission"
                app:item_divider="false"
                app:item_right_image="?attr/nc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_margin_size_12" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_invitation_confirmation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_invitation_confirmation"
                app:item_divider="false"
                app:item_switch="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_margin_size_12" />

            <ai.nexconn.chatui.widget.SettingItemView
                android:id="@+id/siv_group_transfer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nc_title_bar_height"
                app:item_content="@string/nc_group_transfer"
                app:item_divider="false"
                app:item_right_image="?attr/nc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
