<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/nc_auxiliary_background_1_color"
    android:orientation="vertical">

    <ai.nexconn.chatui.widget.component.HeadComponent
        android:id="@+id/nc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nc_title_bar_height"
        app:head_right_text="@string/nc_confirm"
        app:head_title_text="@string/nc_group_announcement" />

    <LinearLayout
        android:id="@+id/ll_group_notice_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/nc_user_manager_background_color"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="@dimen/nc_margin_size_16"
        android:paddingEnd="@dimen/nc_margin_size_16">

        <EditText
            android:id="@+id/group_notice_input"
            style="@style/EditTextStyle.Alignment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/nc_unread_msg_bg_style_color"
            android:hint="@string/nc_group_notice_hint"
            android:maxLength="1024"
            android:padding="@dimen/nc_margin_size_12"
            android:textColor="?attr/nc_text_primary_color"
            android:textColorHint="?attr/nc_text_secondary_color"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_group_notice_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/nc_margin_size_12"
        android:paddingStart="@dimen/nc_margin_size_16"
        android:paddingEnd="@dimen/nc_margin_size_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_notice_content"
            android:layout_width="match_parent"
            android:textDirection="locale"
            android:layout_height="wrap_content"
            android:textColor="?attr/nc_text_primary_color"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/ll_empty_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_empty_notice"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="?attr/nc_conversation_list_no_message_img" />

            <TextView
                android:id="@+id/tv_empty_notice"
                android:textDirection="locale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/nc_empty_notice"
                android:textColor="?attr/nc_text_secondary_color"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_edit_permission"
            android:textDirection="locale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:gravity="center_horizontal"
            android:text="@string/nc_edit_permission"
            android:textColor="?attr/nc_text_secondary_color"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>